add data_summary view template and css
issue #42

--- a/src/client/css/dashboard/panel.css
+++ b/src/client/css/dashboard/panel.css
@@ -33,3 +33,16 @@ Adapted from Bootstrap .modal styles
 #dashboard .panel .body {
     padding: 9px;
 }
+
+#dashboard .panel th, #dashboard .panel td {
+    border-top: none;
+}
+
+#dashboard .panel .table-label {
+    font-weight: bold;
+    text-align: right;
+}
+
+#dashboard .panel .table-value {
+    text-align: right;
+}
