add css comments

--- a/src/client/css/dashboard/data_summary.css
+++ b/src/client/css/dashboard/data_summary.css
@@ -3,5 +3,5 @@ Styles for the data set summary panel.
 */
 
 #data-set-summary-widget table {
-    margin-bottom: 0;
+    margin-bottom: 0; /* Since there is nothing below this table */
 }
