--- a/src/client/css/dashboard/data_summary.css
+++ b/src/client/css/dashboard/data_summary.css
@@ -5,3 +5,23 @@ Styles for the data set summary panel.
 #data-set-summary-widget table {
     margin-bottom: 0; /* Since there is nothing below this table */
 }
+
+/* Styles for panel tables */
+#data-set-summary-widget th, #data-set-summary-widget td {
+    border-top: none;
+}
+
+#data-set-summary-widget .table-label {
+    font-weight: bold;
+    text-align: left;
+    padding-top: 10px;
+    /*border-left: 1px solid #ddd;*/
+    padding-left: 0px;
+}
+
+#data-set-summary-widget .table-value {
+    text-align: right;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: normal;
+}
