--- a/src/client/js/dashboard/templates/data_summary.html
+++ b/src/client/js/dashboard/templates/data_summary.html
@@ -4,42 +4,50 @@
 <div class="body">
     <div class="row-fluid">
         <div class="span6">
-            <table class="table table-hover">
+            <table class="table">
                 <tr>
+                    <td class="table-value"><%=approx_num(messages)%></td>
                     <td class="table-label">messages</td>
-                    <td class="table-value"><%=messages%></td>
                 </tr>
                 <tr>
-                    <td class="table-label">clusters</td>
-                    <td class="table-value"><%=clusters%></td>
+                    <td class="table-value"><%=approx_num(coded_messages)%></td>
+                    <td class="table-label">messages coded (<%=percent_of(coded_messages, messages) %>%)</td>
                 </tr>
                 <tr>
-                    <td class="table-label">participants</td>
-                    <td class="table-value"><%=participants%></td>
+                    <td class="table-value"><%=approx_num(coded_messages_recent)%></td>
+                    <td class="table-label">coded in last <%=recency%> days</td>
                 </tr>
                 <tr>
-                    <td class="table-label">codes</td>
-                    <td class="table-value"><%=codes%></td>
+                    <td class="table-value"><%=approx_num(memos)%></td>
+                    <td class="table-label">memos</td>
+                </tr>
+                <tr>
+                    <td class="table-value"><%=approx_num(memos_recent)%></td>
+                    <td class="table-label">memos in last <%=recency%> days</td>
                 </tr>
             </table>
         </div>
         <div class="span6">
-            <table class="table table-hover">
+            <table class="table">
                 <tr>
-                    <td class="table-label">coded messages</td>
-                    <td class="table-value"><%=coded_messages%> (<%= Math.round(100 * coded_messages / messages) %>%)</td>
+                    <td class="table-value"><%=approx_num(clusters)%></td>
+                    <td class="table-label">clusters</td>
                 </tr>
                 <tr>
-                    <td class="table-label">active coders</td>
-                    <td class="table-value"><%=active_coders%></td>
+                    <td class="table-value"><%=approx_num(participants)%></td>
+                    <td class="table-label">participants</td>
                 </tr>
                 <tr>
-                    <td class="table-label">recent memos</td>
-                    <td class="table-value"><%=recent_memos%></td>
+                    <td class="table-value"><%=approx_num(codes)%></td>
+                    <td class="table-label">codes</td>
                 </tr>
                 <tr>
-                    <td class="table-label">total memos</td>
-                    <td class="table-value"><%=total_memos%></td>
+                    <td class="table-value"><%=approx_num(coders)%></td>
+                    <td class="table-label">coders</td>
+                </tr>
+                <tr>
+                    <td class="table-value"><%=approx_num(coders_recent)%></td>
+                    <td class="table-label">coders in last <%=recency%> days</td>
                 </tr>
             </table>
         </div>
