fill in activities view, template, and sub-templates

--- a/src/client/js/dashboard/templates/activity_item.html
+++ b/src/client/js/dashboard/templates/activity_item.html
@@ -1,1 +1,2 @@
-<div>I'm an activity. My name is <%= name %></div>
+<span class="activity-body"><%= activity_body(obj) %></span>
+<span class="activity-date"><%= time_ago(time) %></span>
