add css for activities

--- a/src/client/css/dashboard.css
+++ b/src/client/css/dashboard.css
@@ -1,3 +1,4 @@
 @import url(common.css);
 @import url(dashboard/panel.css);
 @import url(dashboard/data_summary.css);
+@import url(dashboard/activities.css);
