add unknown activity type template

--- a/src/client/js/dashboard/templates/activities.html
+++ b/src/client/js/dashboard/templates/activities.html
@@ -32,4 +32,9 @@
     <script id="update-memo" type="text/template">
         edit memo
     </script>
+
+    <script id="unknown" type="text/template">
+        <span class="label label-warning">Unknown activity type</span>
+    </script>
+
 </div>
