implement days display

--- a/src/client/js/dashboard/templates/data_summary.html
+++ b/src/client/js/dashboard/templates/data_summary.html
@@ -15,7 +15,7 @@
                 </tr>
                 <tr>
                     <td class="table-value"><%=approx_num(coded_messages_recent)%></td>
-                    <td class="table-label">coded in last <%=recency%> days</td>
+                    <td class="table-label">coded in last <%=days%> days</td>
                 </tr>
                 <tr>
                     <td class="table-value"><%=approx_num(memos)%></td>
@@ -23,7 +23,7 @@
                 </tr>
                 <tr>
                     <td class="table-value"><%=approx_num(memos_recent)%></td>
-                    <td class="table-label">memos in last <%=recency%> days</td>
+                    <td class="table-label">memos in last <%=days%> days</td>
                 </tr>
             </table>
         </div>
@@ -47,7 +47,7 @@
                 </tr>
                 <tr>
                     <td class="table-value"><%=approx_num(coders_recent)%></td>
-                    <td class="table-label">coders in last <%=recency%> days</td>
+                    <td class="table-label">coders in last <%=days%> days</td>
                 </tr>
             </table>
         </div>
