--- a/src/client/js/dashboard/templates/data_summary.html
+++ b/src/client/js/dashboard/templates/data_summary.html
@@ -3,6 +3,9 @@
 </div>
 <div class="body">
     <div class="row-fluid">
+
+        <% if (loaded) { %>
+
         <div class="span6">
             <table class="table">
                 <tr>
@@ -51,5 +54,7 @@
                 </tr>
             </table>
         </div>
+
+        <% } %>
     </div>
 </div>
