--- a/src/client/js/dashboard/templates/activities.html
+++ b/src/client/js/dashboard/templates/activities.html
@@ -3,30 +3,30 @@
         <%= icon('tags') %>
         <%= user_name_link(user) %>
         coded
-        <a href="<%= messages_ref(data.cluster) %>"><%= data.messages %> messages</a>.
+        <a href="<%= messages_ref(json_data.cluster_id) %>"><%= json_data.messages %> messages</a>.
     </script>
 
     <script id="create-code" type="text/template">
         <%= icon('star') %>
         <%=user_name_link(user)%>
         created the new code
-        <%= code_name_link(data.code)%>.
+        <%= code_name_link(json_data)%>.
     </script>
 
     <script id="update-code" type="text/template">
         <%= icon('edit') %>
         <%=user_name_link(user)%>
         modified the code
-        <%= code_name_link(data.code)%>.
+        <%= code_name_link(json_data)%>.
     </script>
 
     <script id="create-memo" type="text/template">
         <%= icon('pencil') %>
         <%=user_name_link(user)%>
         wrote a memo
-        "<%=memo_summary_link(data.memo)%>"
+        "<%=memo_summary_link(json_data)%>"
         about
-        <%= memo_target_link(data.memo)%>.
+        <%= memo_target_link(json_data)%>.
     </script>
 
     <script id="update-memo" type="text/template">
