add expandable job item views

--- a/src/client/js/didiera/templates/job_item.html
+++ b/src/client/js/didiera/templates/job_item.html
@@ -6,3 +6,5 @@
     <%= progress_bar(progress/task_count, "progress-striped active") %>
     <%= progress %> / <%= task_count %>
 </div>
+<div class="btn tasks-toggle-button">Expand</div>
+<ul class="task-list hide"></ul>
