basic job/task editing

--- a/src/client/js/didiera/templates/job_item.html
+++ b/src/client/js/didiera/templates/job_item.html
@@ -3,7 +3,7 @@
     <span class="job-description"><%= description %></span>
 </p>
 <div class="job-progress">
-    <%= progress_bar(progress/task_count, "progress-striped active") %>
+    <%= progress_bar(progress/task_count, "progress-striped") %>
     <%= progress %> / <%= task_count %>
 </div>
 <div class="btn tasks-toggle-button">Expand</div>
