--- a/src/client/js/didiera/templates/task_item.html
+++ b/src/client/js/didiera/templates/task_item.html
@@ -1,4 +1,4 @@
 <p>
-    id:<span class="task-id"><%= id %></span>
-    <span class="task-type"><%= task_type %></span>
+    Type: <span class="task-type"><%= task_type %></span><br/>
+    Params: <span class="task-params"><%= params %></span><br/>
 </p>
