job creator show/hide

--- a/src/client/js/didiera/templates/job_creator.html
+++ b/src/client/js/didiera/templates/job_creator.html
@@ -1,7 +1,7 @@
 <div class="form-horizontal row-fluid">
     <div class="alert alert-error hide" id="description-alert"></div>
     <div class="alert alert-error hide task-list-alert"></div>
-    
+
     <div class="control-group">
         <label class="control-label" for="description-input">Description</label>
         <div class="controls">
@@ -20,6 +20,7 @@
 
     <div class="control-group">
         <div class="controls">
+            <div class="btn cancel-button">Cancel</div>
             <div class="btn btn-primary submit-button">Submit Job</div>
         </div>
     </div>
