--- a/src/client/js/didiera/templates/job_creator.html
+++ b/src/client/js/didiera/templates/job_creator.html
@@ -1,27 +1,32 @@
-<div class="form-horizontal row-fluid">
-    <div class="alert alert-error hide" id="description-alert"></div>
-    <div class="alert alert-error hide task-list-alert"></div>
+<div class="row-fluid">
+    <div class="well">
+        <h3>Create a New Job</h3>
+        <div class="form-horizontal">
+            <div class="alert alert-error hide" id="description-alert"></div>
+            <div class="alert alert-error hide task-list-alert"></div>
 
-    <div class="control-group">
-        <label class="control-label" for="description-input">Description</label>
-        <div class="controls">
-            <input type="text" id="desciprion-input" name="description"
-                   placeholder="job description" class="input-xxlarge" />
-        </div>
-    </div>
+            <div class="control-group">
+                <label class="control-label" for="description-input">Description</label>
+                <div class="controls">
+                    <textarea rows="2" id="description-input" name="description"
+                              placeholder="job description" class="input-xlarge"></textarea>
+                </div>
+            </div>
 
-    <div class="control-group">
-        <label class="control-label">Tasks</label>
-        <div class="controls">
-            <div class="btn add-task-button">Add New Task</div>
-            <ul class="task-list"></ul>
-        </div>
-    </div>
+            <div class="control-group">
+                <label class="control-label">Tasks</label>
+                <div class="controls">
+                    <div class="btn add-task-button">Add New Task</div>
+                    <ul class="task-list"></ul>
+                </div>
+            </div>
 
-    <div class="control-group">
-        <div class="controls">
-            <div class="btn cancel-button">Cancel</div>
-            <div class="btn btn-primary submit-button">Submit Job</div>
+            <div class="control-group">
+                <div class="controls">
+                    <div class="btn cancel-button">Cancel</div>
+                    <div class="btn btn-primary submit-button">Submit Job</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
