--- a/src/client/js/didiera/templates/task_editor.html
+++ b/src/client/js/didiera/templates/task_editor.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Task Editor</h3>
+    <h3>Task Editor</h3>
 </div>
 <div class="modal-body">
     <div class="alert alert-error hide" id="task-type-alert"></div>
