--- a/src/client/js/didiera/templates/job_list.html
+++ b/src/client/js/didiera/templates/job_list.html
@@ -1,3 +1,7 @@
-<h3>Jobs</h3>
-<div class="btn create-job-button">Create Job</div>
-<ul></ul>
+<div class="header">
+    <span class="btn btn-small btn-primary pull-right create-job-button">Create Job</span>
+    <h4>Jobs</h4>
+</div>
+<div class="body">
+    <ul></ul>
+</div>
