job monitor ui improvements

--- a/src/client/js/didiera/templates/job_item.html
+++ b/src/client/js/didiera/templates/job_item.html
@@ -1,10 +1,16 @@
-<p>
-    id:<span class="job-id"><%= id %></span>
+<div class="job-header-row">
     <span class="job-description"><%= description %></span>
-</p>
-<div class="job-progress">
-    <%= progress_bar(progress/task_count, "progress-striped") %>
-    <%= progress %> / <%= task_count %>
+    <span class="job-id muted">id: <i><%= id %></i></span>
+    <span class="job-added">added <%= medium_date_time(added) %> by <%= user_name_link(user) %></span>
 </div>
-<div class="btn tasks-toggle-button">Expand</div>
-<ul class="task-list hide"></ul>
+<div class="job-progress">
+    <div class="span8">
+        <%= progress_bar(progress/task_count, "progress-striped") %>
+    </div>
+    <div class="span4">
+        Completed <%= progress %> out of <%= task_count %> tasks.
+    </div>
+</div>
+<div>
+    <ul class="task-list hide"></ul>
+</div>
