add data field back into task

--- a/src/client/js/didiera/templates/task_editor.html
+++ b/src/client/js/didiera/templates/task_editor.html
@@ -5,11 +5,14 @@
 <div class="modal-body">
     <div class="alert alert-error hide" id="task-type-alert"></div>
     <div class="alert alert-error hide" id="params-alert"></div>
+    <div class="alert alert-error hide" id="data-alert"></div>
     <div class="form">
         <label for="task-type-input">Task Type</label>
         <textarea id="task-type-input" class="input-xlarge" placeholder="task type"><%= task_type %></textarea>
         <label for="params-input">Parameters (JSON)</label>
         <textarea id="params-input" class="input-xlarge" rows="4" placeholder="params"><%= params %></textarea>
+        <label for="data-input">Data Spec (JSON)</label>
+        <textarea id="data-input" class="input-xlarge" rows="4" placeholder="data spec"><%= data %></textarea>
     </div>
 </div>
 <div class="modal-footer">
