fix task field names

--- a/src/client/js/didiera/templates/task_editor.html
+++ b/src/client/js/didiera/templates/task_editor.html
@@ -10,9 +10,9 @@
         <label for="task-type-input">Task Type</label>
         <textarea id="task-type-input" class="input-xlarge" placeholder="task type"><%= task_type %></textarea>
         <label for="params-input">Parameters (JSON)</label>
-        <textarea id="params-input" class="input-xlarge" rows="4" placeholder="params"><%= params %></textarea>
+        <textarea id="params-input" class="input-xlarge" rows="4" placeholder="params"><%= params_json %></textarea>
         <label for="data-input">Data Spec (JSON)</label>
-        <textarea id="data-input" class="input-xlarge" rows="4" placeholder="data spec"><%= data %></textarea>
+        <textarea id="data-input" class="input-xlarge" rows="4" placeholder="data spec"><%= data_json %></textarea>
     </div>
 </div>
 <div class="modal-footer">
