--- a/src/client/js/didiera/templates/task_item.html
+++ b/src/client/js/didiera/templates/task_item.html
@@ -1,5 +1,5 @@
 <p>
     Type: <span class="task-type"><%= task_type %></span><br/>
-    Params: <span class="task-params"><%= params %></span><br/>
-    Data Spec: <span class="task-data"><%= data %></span><br/>
+    Params: <span class="task-params"><%= params_json %></span><br/>
+    Data Spec: <span class="task-data"><%= data_json %></span><br/>
 </p>
