--- a/src/client/js/didiera/templates/job_item.html
+++ b/src/client/js/didiera/templates/job_item.html
@@ -5,10 +5,10 @@
 </div>
 <div class="job-progress">
     <div class="span8">
-        <%= progress_bar(progress/task_count, "progress-striped") %>
+        <%= progress_bar(progress/count, "progress-striped") %>
     </div>
     <div class="span4">
-        Completed <%= progress %> out of <%= task_count %> tasks.
+        Completed <%= progress %> out of <%= count %> tasks.
     </div>
 </div>
 <div>
