--- a/src/client/css/didiera.css
+++ b/src/client/css/didiera.css
@@ -2,3 +2,4 @@
 @import url(common/spinner.css);
 @import url(common/panel.css);
 @import url(didiera/jobs.css);
+@import url(didiera/machines.css);
