add global alertbox system

--- a/src/client/css/common.css
+++ b/src/client/css/common.css
@@ -1,3 +1,4 @@
 @import url(bootstrap.css);
 /*@import url(bootstrap-responsive.css);*/
 @import url(common/layout.css);
+@import url(common/alertbox.css);
