--- a/src/client/js/messages/templates/message_item.html
+++ b/src/client/js/messages/templates/message_item.html
@@ -1,8 +1,18 @@
-<div class="participant" title="<%=participant.name%>">
-    <%= participant.name%>:
+<div class="clearfix">
+    <div class="fluid-column-wrapper">
+        <div class="fluid-column">
+            <div class="message"><%= message %></div>
+            <ul class="instances"></ul>
+        </div>
+    </div>
+    <div class="left-column">
+        <div class="participant" title="<%=participant.name%>">
+            <%= participant.name%>:
+        </div>
+    </div>
+    <div class="right-column">
+        <div class="time" title="<%=medium_date_time(time)%>">
+            <%=medium_date_time(time)%> <i class="faded">s<%=session_id%></i>
+        </div>
+    </div>
 </div>
-<div class="message"><%= message %></div>
-<div class="time" title="<%=medium_date_time(time)%>">
-    <%=medium_date_time(time)%> <i class="faded">s<%=session_id%></i>
-</div>
-<ul class="instances"></ul>
