message list, item, applied code views

--- a/src/client/js/messages/templates/message_list.html
+++ b/src/client/js/messages/templates/message_list.html
@@ -1,6 +1,4 @@
-<div class="header">
-    <h4>Messages</h4>
+<div class="code-click-help">
+    Click to highlight a code
 </div>
-<div class="body">
-    <ul class="message-list"></ul>
-</div>
+<ul class="message-list"></ul>
