--- a/src/client/js/messages/templates/message_item.html
+++ b/src/client/js/messages/templates/message_item.html
@@ -6,13 +6,14 @@
         </div>
     </div>
     <div class="left-column">
+        <div class="time">
+            <a class="time-link" href="<%=messages_start_ref(time)%>" title="Link to <%=long_date_time(time)%>">
+                <i class="time-link-icon icon-share hide"></i>
+                <%=long_time(time)%>
+            </a>
+        </div>
         <div class="participant" title="<%=participant.name%>">
             <%= participant.name%>:
-        </div>
-    </div>
-    <div class="right-column">
-        <div class="time" title="<%=medium_date_time(time)%>">
-            <%=medium_date_time(time)%> <i class="faded">s<%=session_id%></i>
         </div>
     </div>
 </div>
