fix behavior when no messages selected

--- a/src/client/js/messages/templates/cluster_selection.html
+++ b/src/client/js/messages/templates/cluster_selection.html
@@ -8,7 +8,7 @@
     <% } %>
 
     <div class="selection-form hide">
-        cluster id
+        by cluster id
         <input class="cluster-id-input" type="text" placeholder="cluster id"
                value="<%=cluster_id || ''%>"/>
         or date
