show message count, fetch all

--- a/src/client/js/messages/templates/message_list.html
+++ b/src/client/js/messages/templates/message_list.html
@@ -1,4 +1,10 @@
 <div class="code-click-help">
     Click to highlight a code
 </div>
+<div class="load-all-box hide">
+    Showing <span class="showing-count"></span>
+    of <span class="total-count"></span>
+    in this <span class="selection-type"></span>
+    <button class="btn load-all-button">Load All</button>
+</div>
 <ul class="message-list"></ul>
