change cursor on editable

--- a/src/client/css/messages/cluster_selection.css
+++ b/src/client/css/messages/cluster_selection.css
@@ -13,6 +13,7 @@
 
     background-color: #ffff99;
     border: 1px dashed #ffcc66;
+    cursor: pointer;
 }
 
 .cluster-selection .selection-form {
