--- a/src/client/css/messages/message_list.css
+++ b/src/client/css/messages/message_list.css
@@ -4,3 +4,14 @@ ul.message-list {
     margin: 0px;
     overflow: auto;
 }
+
+.message-list-view {
+    padding: 5px;
+    -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+    border: 1px solid #cccccc;
+    -webkit-box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.075);
+       -moz-box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.075);
+            box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.075);
+}
