--- a/src/client/css/messages/message_item.css
+++ b/src/client/css/messages/message_item.css
@@ -69,7 +69,7 @@
     cursor: pointer;
     padding: 0 3px;
     border-radius: 3px;
-    background-color: #eeff99;
+    background-color: #FFFFB2;
 
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.80);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.80);
