fix cluster selection css in messages

--- a/src/client/css/messages/cluster_selection.css
+++ b/src/client/css/messages/cluster_selection.css
@@ -31,3 +31,8 @@
     right: 0;
     top: 0;
 }
+
+.cluster-selection .load-all-button {
+    /* This helps the adjacent text line up with the button */
+    vertical-align: baseline;
+}
